<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:layout_marginTop="@dimen/d_margin"
        android:textSize="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registrationTextView"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:layout_marginLeft="@dimen/d_margin"
        android:layout_marginRight="@dimen/d_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/d_margin" />

    <EditText
        android:id="@+id/userEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/d_margin"
        android:layout_marginTop="@dimen/d_margin"
        android:layout_marginRight="@dimen/d_margin"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmailEditText"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/d_margin"
        android:layout_marginRight="@dimen/d_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/d_margin" />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:ems="10"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:layout_marginLeft="@dimen/d_margin"
        android:layout_marginRight="@dimen/d_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/d_margin" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordAgainEditText"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_marginLeft="@dimen/d_margin"
        android:layout_marginRight="@dimen/d_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/d_margin" />

    <Spinner
        android:id="@+id/phoneSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_margin"
        android:layout_marginRight="@dimen/d_margin"
        android:layout_marginTop="@dimen/d_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/phoneEditText"/>

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneSpinner"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress|textMultiLine"
        android:maxLines="3"
        android:layout_marginLeft="@dimen/d_margin"
        android:layout_marginRight="@dimen/d_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/d_margin" />

    <RadioGroup
        android:id="@+id/accountTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_margin"
        android:layout_marginRight="@dimen/d_margin"
        android:layout_marginTop="@dimen/d_margin"
        android:layout_below="@+id/addressEditText">

        <RadioButton
            android:id="@+id/customerRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer"/>

        <RadioButton
            android:id="@+id/sellerRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seller"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/d_margin"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/accountTypeGroup">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:onClick="register"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="30dp"
            android:onClick="cancel"
            />
    </LinearLayout>

</RelativeLayout>