<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"/>

    <TextView
        android:id="@+id/itemTitle"
        style="@style/ItemDetailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemImage"
        android:padding="10dp"
        android:text="@string/description"
        android:textColor="?android:textColorSecondary"/>

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:isIndicator="true"
            android:numStars="5"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/subTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ratingBar"
            android:padding="10dp"
            android:text="@string/item_info"/>

        <TextView
            android:id="@+id/price"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/red"
            android:text="@string/price"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/price">
            <Button
                android:id="@+id/addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>